# DynaMat-Platform

./: .gitignore  .gitignore.txt  CLAUDE.md  GEMINI.md  IMPROVEMENTS.md  README.md  STATISTICS_IMPLEMENTATION_SUMMARY.md  diagnose_ontology.py  environment.yml  main.py  pyproject.toml  pytest.ini  run_dynamat.py  setup.py  test_gui_modules.py  test_instance_writer.py  test_ontology_integration.py  tmpclaude-62b1-cwd
.claude/: settings.local.json
.claude/agents/: code-tutor-guide.json  code-tutor-guide.md  ontology-semantic-validator.json  ontology-semantic-validator.md  test-runner-diagnostics.json  test-runner-diagnostics.md
.github/workflows/: ci.yml
dynamat/: config.py  manager.py  test_template_system.py
dynamat/gui/: README.md  __init__.py  app.py  dependencies.json  dependency_manager.py  form_builder.py  form_dependencies.json  form_dependency_manager.py  forms.py  main_window.py  ribbon.py  shacl_forms.py  widgets.py
dynamat/ontology/: README.md  __init__.py  experiment_builder.py  instance_query_builder.py  (+10 more)
examples/: ontology.ipynb
guides/: Ontology_Explorer.ipynb
scripts/: run_gui.py  validate_ontology.py
tests/: conftest.py  test_group_builders.py  validate_group_builders.py
tools/: STATISTICS_SPEC.md  audit_property_domains.py  convert_units.py  lookup_qudt_unit.py  migrate_to_quantity_value.py  rebuild_qudt_cache.py  test_entity_selector.py  test_instance_index.py  test_plot_widgets.py  test_pulse_detection_refactoring.py  test_statistics_workflow.py  validate_constraints.py  validate_statistics.py  validate_ttl.py  validate_widget.py
(+502 files in other folders)
